Version: $Id$ $Name$

dophaZ (04/17/05)
-----------------------
+ Updated version to 5.0.0.20
+ Update INSTALL to reflect new minimum autoconf 2.59 requirement for 
  Makefile.dist users.
+ cleanup configure.am, and acinclude.m4 warnings and issues.
+ Fixed need to run Makefile.dist twice problem.
+ Incorporated Purples "5.0.0.19-purple2" patch.
+ - Added to charProfileStruct:
+ - - Leadership AAs (thanks to FatherNitwit for a lot of this)
+ - - Intoxication, Toxicity, Autosplit (from Glee)
+ - - Spell refresh
+ - - expAA
+ - Fixed hpNpcUpdateStruct for 4/12 by rearranging and making hp int32
+ - Properly name drop codes for new combine containers (from uRit2CBBA)
+ - Fixed a problem with drop codes higher than 0x90 in most of the drop code mappings
+ - Added tutorial zones to zone.h (from uRit2CBBA)
+ - Spawns that rename themselves will properly filter themselves now, so they show up if they match the map's runtime filter or your zone filters
+ - Made offline tcpdump reading set pcap filters to test session tracking better
+ Fixed src/Makefile.am to include new weapons29.h and weapons2a.h headers to 
  fix 'make distcheck'

dophaZ (04/06/05)
-----------------------
+ Updated version to 5.0.0.19
+ Update INSTALL to reflect new minimum automake 1.9 requirement for 
  Makefile.dist users.
+ Incorporated Purple's "5.0.0.18-purple1" patch.
+ - Fix for sequence rollover in net layer with arqSeqWrapCutOff
+ - Oversized packets will check for arqSeqGiveUp properly
+ - Added a playback mode for tcpdump files (see notes)
+ - Cleanup in PlayerProfile (fixed offset comments, got rid of some unknowns)
+ - Handle spawns renaming themselves (new OP_SpawnRename). This renames fabled
    mobs which spawn after you are already in zone properly
+ - Handle mobs changing level while you are in the zone (old 
    OP_SpawnAppearance, new handler in SpawnShell for it). This properly levels
    fabled mobs which spawn after you are in the zone